# router_monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/router_monitor/: __init__.py  brightbox.py  brightbox_wifi.py
tests/: test_brightbox.py
